(SIO-2388) Fix misaligned quiz questions

--- a/oioioi/base/static/bootstrap/stylesheets/bootstrap/_forms.scss
+++ b/oioioi/base/static/bootstrap/stylesheets/bootstrap/_forms.scss
@@ -228,9 +228,8 @@ input[type="search"] {
   margin-top: 10px;
   margin-bottom: 10px;
 
-  label {
+  ul label {
     min-height: $line-height-computed; // Ensure the input doesn't jump when there is no text
-    padding-left: 20px;
     margin-bottom: 0;
     font-weight: normal;
     cursor: pointer;
